--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "test:db": "node scripts/test-database.js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@react-native-async-storage/async-storage": "^2.1.0",
     "@supabase/supabase-js": "^2.47.0",
-    "expo-clipboard": "~7.0.0",
     "expo": "~54.0.0",
     "expo-av": "~16.0.7",
+    "expo-clipboard": "~7.0.0",
     "expo-constants": "~18.0.10",
     "expo-file-system": "~19.0.17",
     "expo-status-bar": "~3.0.8",
@@ -25,7 +25,8 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
